Wave no background on mobile bug fix

--- a/app/public/assets/styles/home.css
+++ b/app/public/assets/styles/home.css
@@ -667,6 +667,8 @@ p {
         overflow-x: hidden!important;
     }
     .header {
+        background-color: #4C74FC;
+        height: 20%;
         flex-direction: column;
         justify-content: center;
         align-items: center;
